--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">MaiPlan</string>
 
     <string name="welcome_login">Welcome To MaiPlan!</string>
+    <string name="forgot_password">Forgot Password?</string>
     <string name="no_account">Don\'t have an account? Sign up</string>
     <string name="have_account">Already have an account? Log in</string>
 
@@ -14,4 +15,5 @@
     <!-- content descriptions -->
     <string name="email_icon">Email Icon</string>
     <string name="password_icon">Password Icon</string>
+    <string name="toggle_password_visibility">Toggle Password Visibility</string>
 </resources>
