--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,12 @@
     <string name="register_error_9">Passwords do not match!</string>
     <string name="register_error_default">Registration failed! Please try again.</string>
 
+    <!-- password strength level -->
+    <string name="very_weak">Very Weak</string>
+    <string name="weak">Weak</string>
+    <string name="medium">Medium</string>
+    <string name="strong">Strong</string>
+    <string name="very_strong">Very Strong</string>
+
     <string name="unknown_error">Unknown error! Please try again.</string>
 </resources>
