--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,10 @@
     <string name="welcome_login">Welcome To MaiPlan!</string>
     <string name="create_an_account">Create an account</string>
     <string name="forgot_password">Forgot Password?</string>
+    <string name="reset_password">Reset your password</string>
     <string name="no_account">Don\'t have an account? Sign up</string>
     <string name="have_account">Already have an account? Log in</string>
+    <string name="return_to_login">Return to login screen</string>
 
     <string name="email">Email</string>
     <string name="username">Username</string>
@@ -13,8 +15,11 @@
     <string name="password_again">Password Again</string>
     <string name="login">Login</string>
     <string name="register">Register</string>
+    <string name="reset">Reset</string>
 
-    <string name="register_success">Registration successful!</string>
+    <string name="login_success">You are now logged in.</string>
+    <string name="register_success">Registration successful! You are now logged in.</string>
+    <string name="reset_password_success">Password reset successful! You are now logged in.</string>
 
     <!-- content descriptions -->
     <string name="email_icon">Email Icon</string>
@@ -41,6 +46,16 @@
     <string name="register_error_8">Password again field cannot be empty!</string>
     <string name="register_error_9">Passwords do not match!</string>
     <string name="register_error_default">Registration failed! Please try again.</string>
+
+    <!-- reset password error messages -->
+    <string name="reset_password_error_1">Email field cannot be empty!</string>
+    <string name="reset_password_error_2">Invalid email format!</string>
+    <string name="reset_password_error_3">Email is not yet registered!</string>
+    <string name="reset_password_error_4">Password field cannot be empty!</string>
+    <string name="reset_password_error_5">Password is not strong enough!</string>
+    <string name="reset_password_error_6">Password again field cannot be empty!</string>
+    <string name="reset_password_error_7">Passwords do not match!</string>
+    <string name="reset_password_error_default">Password reset failed! Please try again.</string>
 
     <!-- password strength level -->
     <string name="very_weak">Very Weak</string>
