--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,9 +59,9 @@
     <string name="unknown_error">Unknown error! Please try again.</string>
 
     <!-- bottom nav label -->
-    <string name="activity">Activity</string>
-    <string name="finance">Finance</string>
+    <string name="event">Events</string>
+    <string name="task">Tasks</string>
     <string name="notes">Notes</string>
-    <string name="lists">Lists</string>
+    <string name="file">Files</string>
     <string name="more">More</string>
 </resources>
