--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">MaiPlan</string>
 
+    <!-- main screens -->
     <string name="welcome_login">Welcome To MaiPlan!</string>
     <string name="create_an_account">Create an account</string>
     <string name="forgot_password">Forgot Password?</string>
@@ -8,7 +9,6 @@
     <string name="no_account">Don\'t have an account? Sign up</string>
     <string name="have_account">Already have an account? Log in</string>
     <string name="return_to_login">Return to login screen</string>
-
     <string name="email">Email</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
@@ -16,7 +16,6 @@
     <string name="login">Login</string>
     <string name="register">Register</string>
     <string name="reset">Reset</string>
-
     <string name="login_success">You are now logged in.</string>
     <string name="register_success">Registration successful! You are now logged in.</string>
     <string name="reset_password_success">Password reset successful! You are now logged in.</string>
@@ -65,11 +64,13 @@
     <string name="file">Files</string>
     <string name="more">More</string>
 
+    <!-- event views -->
     <string name="week">Week</string>
     <string name="monthly">Monthly</string>
     <string name="weekly">Weekly</string>
     <string name="daily">Daily</string>
 
+    <!-- days -->
     <string name="mon">Mon</string>
     <string name="tue">Tue</string>
     <string name="wed">Wed</string>
@@ -77,4 +78,12 @@
     <string name="fri">Fri</string>
     <string name="sat">Sat</string>
     <string name="sun">Sun</string>
+
+    <!-- more screen -->
+    <string name="category_management">Category Management</string>
+    <string name="settings">Settings</string>
+    <string name="help">Help</string>
+
+    <!-- category management screen -->
+    <string name="categories">Categories</string>
 </resources>
