changed the view model factory to be generic, made the navigation for category screens

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,5 @@
 
     <!-- category management screen -->
     <string name="categories">Categories</string>
+    <string name="new_category">New Category</string>
 </resources>
