--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,5 +86,8 @@
 
     <!-- category management screen -->
     <string name="categories">Categories</string>
-    <string name="new_category">New Category</string>
+    <string name="category_new">New Category</string>
+    <string name="category_name">Name</string>
+    <string name="category_description">Description</string>
+    <string name="category_save">Save Category</string>
 </resources>
