added swipe to delete and swipe to update for categories for the card UI components

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,6 +102,7 @@
     <string name="category_type_event">Event</string>
     <string name="category_type_finance">Finance</string>
     <string name="category_type_other">Other</string>
+    <string name="category_deleted">Category deleted</string>
     <string name="category_error_1">Name field cannot be empty!</string>
     <string name="category_error_2">Description field cannot be empty!</string>
     <string name="hue">Hue</string>
