--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,10 @@
     <string name="strong">Strong</string>
     <string name="very_strong">Very Strong</string>
 
+    <!-- other error messages -->
+    <string name="failure">Failure! Code:</string>
+    <string name="no_user_data_found">No user data found!</string>
+    <string name="token_refresh_failed">Token refresh failed!</string>
     <string name="unknown_error">Unknown error! Please try again.</string>
 
     <!-- bottom nav label -->
