reworked the flow between Main and Home activities, updated /register, /login, /reset-password and /me API to include new token, so there is no need for /token-refresh API to be called unnecessarily

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="login_success">You are now logged in.</string>
     <string name="register_success">Registration successful! You are now logged in.</string>
     <string name="reset_password_success">Password reset successful! You are now logged in.</string>
+    <string name="welcome_back">Welcome back to MaiPlan!</string>
 
     <!-- content descriptions -->
     <string name="email_icon">Email Icon</string>
