--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,7 @@
     <string name="no_user_data_found">No user data found!</string>
     <string name="token_refresh_failed">Token refresh failed!</string>
     <string name="unknown_error">Unknown error! Please try again.</string>
+    <string name="server_unreachable">Can\'t reach the server! Local database in use.</string>
 
     <!-- bottom nav label -->
     <string name="event">Events</string>
