--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,7 +68,8 @@
     <string name="no_user_data_found">No user data found!</string>
     <string name="token_refresh_failed">Token refresh failed!</string>
     <string name="unknown_error">Unknown error! Please try again.</string>
-    <string name="server_unreachable">Server is unreachable. Please try again later.</string>
+    <string name="server_unreachable">Server is unreachable.</string>
+    <string name="server_unreachable_try_again">Server is unreachable. Please try again later.</string>
     <string name="server_unreachable_skip_to_login">Server is unreachable. Proceeding with local login.</string>
     <string name="incorrect_cred">Incorrect credentials!</string>
 
