--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,6 +114,7 @@
     <string name="category_management">Category Management</string>
     <string name="settings">Settings</string>
     <string name="help">Help</string>
+    <string name="logout">Logout</string>
 
     <!-- category management screen -->
     <string name="categories">Categories</string>
