--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">MaiPlan</string>
 
     <!-- general -->
+    <string name="yes">Yes</string>
     <string name="title">Title</string>
     <string name="name">Name</string>
     <string name="description">Description</string>
@@ -115,6 +116,7 @@
     <string name="settings">Settings</string>
     <string name="help">Help</string>
     <string name="logout">Logout</string>
+    <string name="logout_dialog">Are you sure you want to logout?</string>
 
     <!-- category management screen -->
     <string name="categories">Categories</string>
