--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,6 +115,7 @@
     <string name="category_management">Category Management</string>
     <string name="settings">Settings</string>
     <string name="help">Help</string>
+    <string name="sync">Sync</string>
     <string name="logout">Logout</string>
     <string name="logout_dialog">Are you sure you want to logout?</string>
 
